--- a/scss/work.scss
+++ b/scss/work.scss
@@ -45,12 +45,12 @@ h1 {
 }
 .card {
   width: 20%;
-  flex: 0 1 calc(20% - 8px);
+  flex: 0 1 calc(20% - 1px);
   padding: 0 1.7rem;
   padding-bottom: 2em;
 
   .wrapper {
-    background: url(../images/artwork1.jpeg) center / cover no-repeat;
+    // background: url(../images/artwork1.jpeg) center / cover no-repeat;
     border-radius: 3px;
     min-height: 500px;
     position: relative;
