--- a/css/work.css
+++ b/css/work.css
@@ -31,9 +31,9 @@ h1 {
 
 .card {
   width: 20%;
-  -webkit-box-flex: 0;
-      -ms-flex: 0 1 calc(20% - 1px);
-          flex: 0 1 calc(20% - 1px);
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 22%;
+          flex: 1 1 22%;
   padding: 0 1.7rem;
   padding-bottom: 2em;
 }
